syntax = "proto3";

package bilibili.app.playerunite.pgcanymodel;

import "bilibili/pgc/gateway/player/v2/playurl.proto";

message PGCAnyModel {
    bilibili.pgc.gateway.player.v2.PlayViewBusinessInfo business = 3;
}
