syntax = "proto3";

package bilibili.app.playurl.v1;

message PlayViewReply {
    PlayArcConf play_arc = 5;
}

message PlayArcConf {
    ArcConf background_play_conf = 1;
}

message ArcConf {
    bool is_support = 1;
    bool disabled = 2;
    ExtraContent extra_content = 3;
}

message ExtraContent {
    string disabled_reason = 1;
    int64 disabled_code = 2;
}
